<resources>
    <string name="app_name">Time Management</string>
    <string name="title">Title:</string>
    <string name="duedate">Duedate:</string>
    <string name="time">Time:</string>
    <string name="unitcode">UnitCode:</string>
    <string name="urgency">Urgency:</string>
    <string name="important">Important:</string>
    <string name="category">Category:</string>
    <string name="weight">Weight:</string>
    <string name="notify">Notification:</string>
    <string name="detail">Detail:</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="is_urgent">Urgent</string>
    <string name="isnot_urgent">Not Urgent</string>
    <string name="is_important">Important</string>
    <string name="isnot_important">Not Important</string>
    <string name="dlg_calendar_title">Select date</string>
    <string name="dlg_timepicker_title">Select time</string>
    <string name="dlg_weightpicker">Select weight</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_task_success">Successfully create a task.</string>
    <string name="edit_task_success">Successfully edit a task.</string>
    <string name="add_code_success">Successfully create a unit code.</string>
    <string name="edit_code_success">Successfully edit a unit code.</string>
    <string name="Y">Y</string>
    <string name="yes">Yes</string>
    <string name="N">N</string>
    <string name="no">No</string>
    <string name="status">Status:</string>
    <string name="completed">Completed</string>
    <string name="complete">Complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="confirm_complete_title">Mark completed confirmation</string>
    <string name="confirm_complete_message">Do you want to mark the task as completed?</string>
    <string name="confirm_delete_task_title">Delete task confirmation</string>
    <string name="confirm_delete_task_message">Do you want to delete the task?</string>
    <string name="confirm_delete_unitcode_title">Delete unitcode confirmation</string>
    <string name="confirm_delete_unitcode_message">Do you want to delete the unitcode?</string>
    <string name="confirm_cancel_addEdit_title">Cancel changes</string>
    <string name="confirm_cancel_addEdit_message">Do you want to abandon the changes?</string>
    <string name="main_screen_tmq">Your Time Managment Questionnaire Score:</string>
    <string name="toolbar_edit">Edit</string>
    <string name="delete_success">Successfully delete the task</string>
    <string name="validate_input">Invalid</string>
    <string name="validate_title">Please specify title.</string>
    <string name="validate_duedate">Please specify due date.</string>
    <string name="validate_unitcode">Please choose a unit code.</string>
    <string-array name="sort_array">
        <item>Title</item>
        <item>Due Date</item>
    </string-array>
    <string-array name="questions_type">
        <item>Short-rang Planning</item>
        <item>Time Attitude</item>
        <item>Long-range Planning</item>
    </string-array>
    <string-array name="Q_choice">
        <item>Never</item>
        <item>Rarely</item>
        <item>Occasionally</item>
        <item>Regularly</item>
        <item>Always</item>
    </string-array>

</resources>
