<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/input_gap"
        android:layout_marginLeft="@dimen/input_gap"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_duedate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/input_gap"
        android:layout_marginLeft="@dimen/input_gap"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_title">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:layout_below="@+id/tv_title"
            android:text="@string/duedate" />

        <TextView
            android:id="@+id/tv_detail_duedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/input_gap"
        android:layout_marginLeft="@dimen/input_gap"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_duedate">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tv_detail_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_unitcode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/input_gap"
        android:layout_marginLeft="@dimen/input_gap"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_time">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/unitcode" />

        <TextView
            android:id="@+id/tv_detail_unitcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_category"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/input_gap"
        android:layout_marginLeft="@dimen/input_gap"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_unitcode">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/category" />

        <TextView
            android:id="@+id/tv_detail_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_weight"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/input_gap"
        android:layout_marginLeft="@dimen/input_gap"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_category">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/weight" />

        <TextView
            android:id="@+id/tv_detail_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_notify"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/input_gap"
        android:layout_marginLeft="@dimen/input_gap"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_weight">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/notify" />

        <TextView
            android:id="@+id/tv_detail_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/input_gap"
        android:layout_marginLeft="@dimen/input_gap"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_notify">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/detail" />

        <TextView
            android:id="@+id/tv_detail_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_complete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/input_gap"
        android:layout_marginLeft="@dimen/input_gap"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_detail">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/status" />

        <TextView
            android:id="@+id/tv_detail_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left" />
    </LinearLayout>
</RelativeLayout>
